Uploading version 1 of the task

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Virtual Environment
+.venv
+.venv/*
+
+# Added on repositories
+PythonToNSP
+PythonToNSP/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
